--- a/src/main/resources/view/LoginView.fxml
+++ b/src/main/resources/view/LoginView.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="711.0" prefWidth="900.0" styleClass="leftside" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.LoginController">
+<AnchorPane prefHeight="711.0" prefWidth="900.0" styleClass="leftside" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.UserController">
     <children>
         <BorderPane prefHeight="600.0" prefWidth="800.0" styleClass="leftside" stylesheets="@style.css">
             <right>
