--- a/src/main/resources/view/css/homepage.css
+++ b/src/main/resources/view/css/homepage.css
@@ -48,7 +48,7 @@
     -fx-background-color: #EAEEF4;
     -fx-border-radius: 50px;
     -fx-padding: 10 20;
-    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.4), 5, 0, 2, 4);
+    /*-fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.4), 5, 0, 2, 4);*/
  }
 
 .search{
