--- a/src/main/resources/view/HomePage.fxml
+++ b/src/main/resources/view/HomePage.fxml
@@ -7,15 +7,15 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
-<HBox fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" styleClass="root" stylesheets="@css/homepage.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<HBox fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" styleClass="root" stylesheets="@css/homepage.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.HomeController">
     <children>
         <VBox fx:id="side_ankerpane" prefHeight="550.0" prefWidth="210.0" styleClass="side_ankerpane" stylesheets="@css/homepage.css">
          <children>
-            <AnchorPane prefHeight="548.0" prefWidth="206.0">
+            <AnchorPane prefHeight="792.0" prefWidth="203.0">
                <children>
                   <Pane fx:id="inner_pane" layoutX="3.0" layoutY="35.0" prefHeight="57.0" prefWidth="200.0" styleClass="inner_pane">
                      <children>
@@ -46,7 +46,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button layoutX="17.0" layoutY="226.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="172.0" styleClass="other_button" stylesheets="@css/homepage.css" text="Fee" textAlignment="CENTER" textFill="WHITE">
+                  <Button layoutX="17.0" layoutY="226.0" mnemonicParsing="false" onAction="#onManageFees" prefHeight="38.0" prefWidth="172.0" styleClass="other_button" stylesheets="@css/homepage.css" text="Fee" textAlignment="CENTER" textFill="WHITE">
                      <graphic>
                         <ImageView fitHeight="18.0" fitWidth="39.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -90,52 +90,52 @@
                </children>
             </AnchorPane>
          </children></VBox>
-      <Pane prefHeight="550.0" prefWidth="665.0">
+      <Pane prefHeight="800.0" prefWidth="1075.0">
          <children>
-            <Pane prefHeight="81.0" prefWidth="665.0" styleClass="top_bar" stylesheets="@css/homepage.css">
+            <Pane prefHeight="806.0" prefWidth="1079.0" styleClass="top_bar" stylesheets="@css/homepage.css">
                <children>
-                  <TextField layoutX="250.0" layoutY="28.0" promptText=" Search :" styleClass="search" stylesheets="@css/homepage.css" />
-                  <ImageView fitHeight="49.0" fitWidth="44.0" layoutX="190.0" layoutY="19.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@images/HomePage/icons8-search-64.png" />
-                     </image>
-                  </ImageView>
-                  <Button layoutX="442.0" layoutY="21.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="44.0" styleClass="topbar_button" stylesheets="@css/homepage.css">
-                     <graphic>
-                        <ImageView fitHeight="24.0" fitWidth="19.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@images/HomePage/icons8-notification-50.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                  </Button>
-                  <Button layoutX="518.0" layoutY="21.0" mnemonicParsing="false" styleClass="topbar_button" stylesheets="@css/homepage.css">
-                     <graphic>
-                        <ImageView fitHeight="24.0" fitWidth="19.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@images/HomePage/icons8-setting-50.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                  </Button>
-                  <Button layoutX="592.0" layoutY="21.0" mnemonicParsing="false" styleClass="topbar_button" stylesheets="@css/homepage.css">
-                     <graphic>
-                        <ImageView fitHeight="19.0" fitWidth="41.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@images/HomePage/icons8-account-50.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                  </Button>
-               </children>
-            </Pane>
-            <Pane layoutX="-5.0" layoutY="81.0" prefHeight="469.0" prefWidth="671.0">
-               <children>
-                  <Text layoutX="297.0" layoutY="135.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Hello Hello" wrappingWidth="188.9644775390625">
-                     <font>
-                        <Font size="36.0" />
-                     </font>
-                  </Text>
+                  <HBox alignment="CENTER_RIGHT" fillHeight="false" layoutX="249.0" layoutY="2.0" nodeOrientation="RIGHT_TO_LEFT" prefHeight="81.0" prefWidth="1041.0">
+                     <children>
+                        <AnchorPane nodeOrientation="RIGHT_TO_LEFT" prefHeight="28.0" prefWidth="1094.0" styleClass="top_bar" stylesheets="@css/homepage.css">
+                           <children>
+                              <Button alignment="BASELINE_RIGHT" contentDisplay="RIGHT" layoutX="79.0" layoutY="6.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="51.0" styleClass="topbar_button" stylesheets="@css/homepage.css">
+                                 <graphic>
+                                    <ImageView fitHeight="43.0" fitWidth="25.0" nodeOrientation="RIGHT_TO_LEFT" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@images/HomePage/icons8-account-50.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                              </Button>
+                              <Button alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="177.0" layoutY="12.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="44.0" styleClass="topbar_button" stylesheets="@css/homepage.css" textAlignment="RIGHT">
+                                 <graphic>
+                                    <ImageView fitHeight="24.0" fitWidth="19.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@images/HomePage/icons8-notification-50.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                              </Button>
+                              <ImageView fitHeight="49.0" fitWidth="44.0" layoutX="478.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@images/HomePage/icons8-search-64.png" />
+                                 </image>
+                              </ImageView>
+                              <TextField alignment="TOP_LEFT" layoutX="284.0" layoutY="15.0" nodeOrientation="LEFT_TO_RIGHT" promptText="Search:" styleClass="search" stylesheets="@css/homepage.css" />
+                              <Button alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1.0" layoutY="10.0" mnemonicParsing="false" styleClass="topbar_button" stylesheets="@css/homepage.css">
+                                 <graphic>
+                                    <ImageView fitHeight="24.0" fitWidth="19.0" nodeOrientation="RIGHT_TO_LEFT" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@images/HomePage/icons8-setting-50.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                              </Button>
+                           </children>
+                        </AnchorPane>
+                     </children>
+                  </HBox>
+                  <StackPane fx:id="contentArea" layoutX="63.0" layoutY="117.0" prefHeight="625.0" prefWidth="1122.0" />
                </children>
             </Pane>
          </children>
