--- a/src/main/resources/view/login&register/confirm.fxml
+++ b/src/main/resources/view/login&register/confirm.fxml
@@ -50,9 +50,12 @@
         </children>
     </HBox>
 
-    <Pane prefHeight="0.0" prefWidth="345.0" />
-
     <Button fx:id="confirmregisterButton" onAction="#handleConfirm" prefHeight="41.0" prefWidth="123.0" text="Xác nhận" />
+   <Label fx:id="countdownLabel" style="-fx-text-fill: red;" text="">
+      <font>
+         <Font name="System Bold" size="15.0" />
+      </font>
+   </Label>
 
     <Label fx:id="cfregisterStatusLabel" style="-fx-text-fill: red;" text="">
         <font><Font name="System Bold" size="15.0" /></font>
@@ -67,5 +70,10 @@
             <Hyperlink fx:id="loginLink2" onAction="#handleLoginClick" text="Đăng nhập" />
         </children>
     </HBox>
-   <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="29.0" prefWidth="342.0" text="Nếu không nhận được mã, trở lại trang trước để kiểm tra !" textAlignment="CENTER" textFill="#333f49" />
+   <HBox alignment="CENTER" prefHeight="33.0" prefWidth="345.0">
+      <children>
+         <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="29.0" prefWidth="156.0" text="Bạn không nhận được mã?" textAlignment="CENTER" textFill="#333f49" />
+         <Hyperlink fx:id="reSendCode" onAction="#handleReSendCode" prefHeight="31.0" prefWidth="112.0" text="Yêu cầu gửi lại mã!" />
+      </children>
+   </HBox>
 </VBox>
