--- a/src/main/resources/view/fee_insert.fxml
+++ b/src/main/resources/view/fee_insert.fxml
@@ -1,49 +1,53 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" prefHeight="408.0" prefWidth="831.0" spacing="10" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.FeeViewController">
-   <Pane prefHeight="407.0" prefWidth="831.0">
+<VBox alignment="CENTER" prefHeight="415.0" prefWidth="873.0" spacing="10" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.FeeViewController">
+   <Pane prefHeight="443.0" prefWidth="874.0" stylesheets="@css/insert_fee.css">
       <children>
-         <AnchorPane layoutX="402.0" layoutY="14.0">
+         <Pane id="grid_box" layoutX="410.0" layoutY="18.0" prefHeight="380.0" prefWidth="450.0" styleClass="root" stylesheets="@css/insert_fee.css">
             <children>
             
                       <!-- Form nhập liệu -->
-                <GridPane hgap="10" prefHeight="370.0" prefWidth="414.0" stylesheets="@css/insert_fee.css" vgap="10">
+                <GridPane hgap="10" layoutX="14.0" layoutY="-13.0" prefHeight="390.0" prefWidth="420.0" style="-fx-padding: 24px 0;" vgap="10">
                     <children>
                         <Label text="Loại khoản thu:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-                        <ComboBox fx:id="categoryComboBox" editable="true" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+                        <ComboBox fx:id="categoryComboBox" editable="true" styleClass="custom-combo" stylesheets="@css/insert_fee.css" GridPane.columnIndex="1" GridPane.rowIndex="0" />
             
                               <Label text="Nhóm khoản thu:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-                        <ComboBox fx:id="subCategoryComboBox" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <ComboBox fx:id="subCategoryComboBox" editable="true" prefHeight="36.0" prefWidth="210.0" styleClass="custom-combo" stylesheets="@css/insert_fee.css" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             
-                              <Label text="Số tiền:" GridPane.rowIndex="2" />
-                        <TextField fx:id="amountField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                              <Label text="Số tiền:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+                        <TextField fx:id="amountField" styleClass="custom-text-area" stylesheets="@css/insert_fee.css" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             
-                              <Label text="Đơn vị tính:" GridPane.rowIndex="3" />
-                        <ComboBox fx:id="unitComboBox" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                              <Label text="Đơn vị tính:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+                        <ComboBox fx:id="unitComboBox" editable="true" prefHeight="36.0" prefWidth="210.0" styleClass="custom-combo" stylesheets="@css/insert_fee.css" GridPane.columnIndex="1" GridPane.rowIndex="3" />
             
-                              <Label text="Kỳ thanh toán:" GridPane.rowIndex="4" />
-                        <ComboBox fx:id="billPeriodComboBox" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                              <Label text="Kỳ thanh toán:" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+                        <ComboBox fx:id="billPeriodComboBox" editable="true" prefHeight="36.0" prefWidth="210.0" styleClass="custom-combo" stylesheets="@css/insert_fee.css" GridPane.columnIndex="1" GridPane.rowIndex="4" />
             
-                              <Label text="Mô tả:" GridPane.rowIndex="5" />
-                        <TextArea fx:id="descriptionArea" prefHeight="100.0" prefWidth="293.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                              <Label text="Mô tả:" GridPane.columnIndex="0" GridPane.rowIndex="5" />
+                        <TextArea fx:id="descriptionArea" prefHeight="18.0" prefWidth="314.0" styleClass="custom-text-area" stylesheets="@css/insert_fee.css" GridPane.columnIndex="1" GridPane.rowIndex="5" />
             
-                              <Label text="Ngày bắt đầu:" GridPane.rowIndex="6" />
-                        <DatePicker fx:id="startDatePicker" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                              <Label text="Ngày bắt đầu:" GridPane.columnIndex="0" GridPane.rowIndex="6" />
+                        <DatePicker fx:id="startDatePicker" styleClass="custom-date-picker" stylesheets="@css/insert_fee.css" GridPane.columnIndex="1" GridPane.rowIndex="6" />
             
-                              <Label text="Ngày kết thúc:" GridPane.rowIndex="7" />
-                        <DatePicker fx:id="endDatePicker" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                              <Label text="Ngày kết thúc:" GridPane.columnIndex="0" GridPane.rowIndex="7" />
+                        <DatePicker fx:id="endDatePicker" prefHeight="18.0" prefWidth="212.0" styleClass="custom-date-picker" stylesheets="@css/insert_fee.css" GridPane.columnIndex="1" GridPane.rowIndex="7" />
                     </children>
                   <columnConstraints>
                      <ColumnConstraints />
@@ -54,19 +58,31 @@
                      <RowConstraints />
                      <RowConstraints />
                      <RowConstraints />
-                     <RowConstraints maxHeight="27.20000610351562" minHeight="25.599999999999994" prefHeight="27.20000610351562" />
-                     <RowConstraints maxHeight="101.60000000000002" minHeight="99.9999938964844" prefHeight="99.9999938964844" />
+                     <RowConstraints />
+                     <RowConstraints />
                      <RowConstraints />
                      <RowConstraints />
                   </rowConstraints>
+                  <cursor>
+                     <Cursor fx:constant="DEFAULT" />
+                  </cursor>
                 </GridPane>
             </children>
-         </AnchorPane>
-         <Pane layoutY="-3.0" prefHeight="416.0" prefWidth="366.0">
+            <effect>
+               <DropShadow blurType="GAUSSIAN" height="9.0" radius="4.0" spread="0.37" width="9.0" />
+            </effect>
+         </Pane>
+         <Pane layoutX="-1.0" layoutY="2.0" prefHeight="403.0" prefWidth="368.0">
             <children>
             
-                            <!-- Label hiển thị trạng thái -->
-                <Label fx:id="statusLabel" layoutX="163.0" layoutY="244.0" text="Trạng thái" />
+                <!-- Label hiển thị trạng thái -->
+                <Label fx:id="statusLabel" layoutX="157.0" layoutY="322.0" prefHeight="17.0" prefWidth="93.0" />
+               <Button fx:id="addButton" layoutX="162.0" layoutY="263.0" mnemonicParsing="false" onAction="#handleAdd" prefHeight="25.0" prefWidth="82.0" style="-fx-border-radius: 300;" styleClass="custom-button" stylesheets="@css/insert_fee.css" text="Submit" />
+               <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="129.0" layoutY="64.0" pickOnBounds="true" preserveRatio="true">
+                  <image>
+                     <Image url="@images/HomePage/icons8-apartment-100.png" />
+                  </image>
+               </ImageView>
             </children>
          </Pane>
       </children>
