--- a/src/main/resources/view/HomePage.fxml
+++ b/src/main/resources/view/HomePage.fxml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ContextMenu?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -9,35 +12,36 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<HBox fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" styleClass="root" stylesheets="@css/homepage.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.HomeController">
-    <children>
-        <VBox fx:id="side_ankerpane" prefHeight="550.0" prefWidth="210.0" styleClass="side_ankerpane" stylesheets="@css/homepage.css">
+<HBox fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" styleClass="root" stylesheets="@css/homepage.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.HomeController">
+   <children>
+      <VBox fx:id="side_ankerpane" prefHeight="550.0" prefWidth="210.0" styleClass="side_ankerpane" stylesheets="@css/homepage.css">
          <children>
             <AnchorPane prefHeight="792.0" prefWidth="203.0">
                <children>
-                  <Pane fx:id="inner_pane" layoutX="3.0" layoutY="35.0" prefHeight="57.0" prefWidth="200.0" styleClass="inner_pane">
+                  <Pane fx:id="inner_pane" layoutX="3.0" layoutY="13.0" prefHeight="57.0" prefWidth="200.0" styleClass="inner_pane">
                      <children>
-                        <ImageView fitHeight="58.0" fitWidth="72.0" layoutX="14.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="58.0" fitWidth="72.0" layoutX="64.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@images/HomePage/dashboard.png" />
                            </image>
                         </ImageView>
                      </children>
                   </Pane>
-                  <Button layoutX="17.0" layoutY="109.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="172.0" styleClass="home_button" stylesheets="@css/homepage.css" text="Home" textAlignment="CENTER" textFill="WHITE">
+                  <Button fx:id="homeButton" layoutX="17.0" layoutY="90.0" mnemonicParsing="false" onAction="#onManageHome" prefHeight="51.0" prefWidth="172.0" styleClass="clicked_button" text="Home" textAlignment="CENTER" textFill="WHITE">
                      <graphic>
                         <ImageView fitHeight="18.0" fitWidth="39.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@images/HomePage/home.png" />
+                              <Image url="@images/HomePage/home_pixian_ai.png" />
                            </image>
                         </ImageView>
                      </graphic>
                      <font>
                         <Font name="Arial Bold" size="12.0" />
                      </font></Button>
-                  <Button layoutX="17.0" layoutY="175.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="172.0" styleClass="other_button" stylesheets="@css/homepage.css" text="Resident" textAlignment="CENTER" textFill="WHITE">
+                  <Button fx:id="residentButton" layoutX="17.0" layoutY="172.0" mnemonicParsing="false" onAction="#onManageResident" prefHeight="38.0" prefWidth="172.0" styleClass="other_button" stylesheets="@css/homepage.css" text="Resident" textAlignment="CENTER" textFill="WHITE">
                      <graphic>
                         <ImageView fitHeight="18.0" fitWidth="39.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -46,7 +50,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button layoutX="17.0" layoutY="226.0" mnemonicParsing="false" onAction="#onManageFees" prefHeight="38.0" prefWidth="172.0" styleClass="other_button" stylesheets="@css/homepage.css" text="Fee" textAlignment="CENTER" textFill="WHITE">
+                  <Button fx:id="feeButton" layoutX="17.0" layoutY="226.0" mnemonicParsing="false" onAction="#onManageFees" prefHeight="38.0" prefWidth="172.0" styleClass="other_button" stylesheets="@css/homepage.css" text="Fee" textAlignment="CENTER" textFill="WHITE">
                      <graphic>
                         <ImageView fitHeight="18.0" fitWidth="39.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -55,7 +59,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button layoutX="17.0" layoutY="280.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="172.0" styleClass="other_button" stylesheets="@css/homepage.css" text="Bill" textAlignment="CENTER" textFill="WHITE">
+                  <Button fx:id="billButton" layoutX="17.0" layoutY="280.0" mnemonicParsing="false" onAction="#onManageBill" prefHeight="38.0" prefWidth="172.0" styleClass="other_button" stylesheets="@css/homepage.css" text="Bill" textAlignment="CENTER" textFill="WHITE">
                      <graphic>
                         <ImageView fitHeight="18.0" fitWidth="39.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -64,7 +68,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button layoutX="17.0" layoutY="332.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="172.0" styleClass="other_button" stylesheets="@css/homepage.css" text="Report" textAlignment="CENTER" textFill="WHITE">
+                  <Button fx:id="reportButton" layoutX="17.0" layoutY="332.0" mnemonicParsing="false" onAction="#onManageReport" prefHeight="38.0" prefWidth="172.0" styleClass="other_button" stylesheets="@css/homepage.css" text="Report" textAlignment="CENTER" textFill="WHITE">
                      <graphic>
                         <ImageView fitHeight="18.0" fitWidth="39.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -73,7 +77,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button layoutX="17.0" layoutY="390.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="172.0" styleClass="other_button" stylesheets="@css/homepage.css" text="Support" textAlignment="CENTER" textFill="WHITE">
+                  <Button fx:id="supportButton" layoutX="17.0" layoutY="385.0" mnemonicParsing="false" onAction="#onManageSupport" prefHeight="38.0" prefWidth="172.0" styleClass="other_button" stylesheets="@css/homepage.css" text="Support" textAlignment="CENTER" textFill="WHITE">
                      <graphic>
                         <ImageView fitHeight="18.0" fitWidth="39.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -94,11 +98,12 @@
          <children>
             <Pane prefHeight="806.0" prefWidth="1079.0" styleClass="top_bar" stylesheets="@css/homepage.css">
                <children>
-                  <HBox alignment="CENTER_RIGHT" fillHeight="false" layoutX="249.0" layoutY="2.0" nodeOrientation="RIGHT_TO_LEFT" prefHeight="81.0" prefWidth="1041.0">
+                  <Line endX="1040.5919189453125" endY="69.58399963378906" startX="36.0479850769043" startY="69.58399963378906" />
+                  <HBox alignment="CENTER_RIGHT" fillHeight="false" layoutX="122.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="81.0" prefWidth="937.0" stylesheets="@style.css">
                      <children>
-                        <AnchorPane nodeOrientation="RIGHT_TO_LEFT" prefHeight="54.0" prefWidth="810.0" styleClass="top_bar" stylesheets="@css/homepage.css">
+                        <AnchorPane nodeOrientation="RIGHT_TO_LEFT" prefHeight="55.0" prefWidth="1010.0" styleClass="top_bar" stylesheets="@css/homepage.css">
                            <children>
-                              <Button alignment="BASELINE_RIGHT" contentDisplay="RIGHT" layoutX="79.0" layoutY="6.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="51.0" styleClass="topbar_button" stylesheets="@css/homepage.css">
+                              <Button fx:id="accountButton" alignment="BASELINE_RIGHT" contentDisplay="RIGHT" layoutX="40.0" layoutY="4.0" mnemonicParsing="false" onAction="#handleOpenMenu" prefHeight="45.0" prefWidth="45.0" styleClass="topbar_button" stylesheets="@css/homepage.css">
                                  <graphic>
                                     <ImageView fitHeight="43.0" fitWidth="25.0" nodeOrientation="RIGHT_TO_LEFT" pickOnBounds="true" preserveRatio="true">
                                        <image>
@@ -106,31 +111,36 @@
                                        </image>
                                     </ImageView>
                                  </graphic>
+                                 <contextMenu>
+                                    <ContextMenu fx:id="accountMenu">
+                                       <items>
+                                          <!-- Hiển thị tên tài khoản -->
+                                          <MenuItem fx:id="usernameItem" mnemonicParsing="false" text="Tài khoản: [Tên User]" />
+                                          <SeparatorMenuItem />
+                                          <!-- Đăng xuất -->
+                                          <MenuItem fx:id="logoutItem" mnemonicParsing="false" text="Đăng xuất" onAction="#handleLogOut"/>
+                                          <!-- Thoát ứng dụng -->
+                                          <MenuItem fx:id="exitItem" mnemonicParsing="false" text="Thoát" onAction="#handleQuit"/>
+                                       </items>
+                                    </ContextMenu>
+                                 </contextMenu>
                               </Button>
-                              <Button alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="177.0" layoutY="12.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="44.0" styleClass="topbar_button" stylesheets="@css/homepage.css" textAlignment="RIGHT">
+
+                              <Button alignment="CENTER" contentDisplay="RIGHT" layoutX="110.0" layoutY="4.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="45.0" styleClass="topbar_button" stylesheets="@css/homepage.css" textAlignment="RIGHT">
                                  <graphic>
-                                    <ImageView fitHeight="24.0" fitWidth="19.0" pickOnBounds="true" preserveRatio="true">
+                                    <ImageView fitHeight="24.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
                                           <Image url="@images/HomePage/icons8-notification-50.png" />
                                        </image>
                                     </ImageView>
                                  </graphic>
                               </Button>
-                              <ImageView fitHeight="49.0" fitWidth="44.0" layoutX="478.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="396.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@images/HomePage/icons8-search-64.png" />
                                  </image>
                               </ImageView>
-                              <TextField alignment="TOP_LEFT" layoutX="284.0" layoutY="15.0" nodeOrientation="LEFT_TO_RIGHT" promptText="Search:" styleClass="search" stylesheets="@css/homepage.css" />
-                              <Button alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1.0" layoutY="10.0" mnemonicParsing="false" styleClass="topbar_button" stylesheets="@css/homepage.css">
-                                 <graphic>
-                                    <ImageView fitHeight="24.0" fitWidth="19.0" nodeOrientation="RIGHT_TO_LEFT" pickOnBounds="true" preserveRatio="true">
-                                       <image>
-                                          <Image url="@images/HomePage/icons8-setting-50.png" />
-                                       </image>
-                                    </ImageView>
-                                 </graphic>
-                              </Button>
+                              <TextField alignment="TOP_LEFT" layoutX="183.0" layoutY="6.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="25.0" prefWidth="190.0" promptText="Search:" styleClass="search" stylesheets="@css/homepage.css" />
                            </children>
                         </AnchorPane>
                      </children>
@@ -140,5 +150,5 @@
             </Pane>
          </children>
       </Pane>
-    </children>
+   </children>
 </HBox>
